Remove from logging an useless string

--- a/logging.conf
+++ b/logging.conf
@@ -25,5 +25,5 @@ formatter=simpleFormatter
 args=('wpbf.log', 'a')
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(asctime)s - %(levelname)s - %(message)s
 datefmt=
