New option "dontstop" to don't stop all pending tasks when a correct password is found. Also, some updates in documentation and configuration files was done.

--- a/logging.conf
+++ b/logging.conf
@@ -10,7 +10,7 @@ keys=simpleFormatter
 [logger_root]
 level=DEBUG
 handlers=consoleHandler,fileHandler
-qualname=bb
+qualname=wpbf
 
 [handler_consoleHandler]
 class=StreamHandler
